--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
-<script src="assets/javascript/keys.js"></script>
+<script src="keys.js"></script>
 <script src="assets/javascript/app.js"></script>
 
 </body>
